<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/b">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_resp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:background="@color/white"
            app:cardCornerRadius="5dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/f_i_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/f_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fist_name"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/f_id_resp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/fist_name_show"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:visibility="gone"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/f_i_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/f_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fist_name_show_txt"
                        android:textColor="@color/black"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/f_name_resp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/fist_name_show_resp"
                        android:textColor="@color/black"
                        android:textSize="22sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l_i_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/f_i_name"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/l_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_name_show_txt"
                        android:textColor="@color/black"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/l_name_resp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/last_name_show_resp"
                        android:textColor="@color/black"
                        android:textSize="22sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/e_i_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/l_i_name"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/e_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_show_txt"
                        android:textColor="@color/black"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/e_email_resp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/email_show_resp"
                        android:textColor="@color/black"
                        android:textSize="22sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/p_i_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/e_i_email"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/p_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password_show_txt"
                        android:textColor="@color/black"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/p_password_resp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/password_show_resp"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="22sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/c_i_cpf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/p_i_password"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/c_cpf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cpf_show_txt"
                        android:textColor="@color/black"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/c_cpf_resp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/cpf_show_resp"
                        android:textColor="@color/black"
                        android:textSize="22sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cn_i_cnpj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/c_i_cpf"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/cn_cnpj"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cnpj_show_txt"
                        android:textColor="@color/black"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/cn_cnpj_resp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/cnpj__show_resp"
                        android:textColor="@color/black"
                        android:textSize="22sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/a_i_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cn_i_cnpj"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/a_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address_show_txt"
                        android:textColor="@color/black"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/a_address_resp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/address_show_resp"
                        android:textColor="@color/black"
                        android:textSize="22sp" />
                </LinearLayout>
            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/btn_layout_v"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cd_resp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/go_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/round_btn_del"
                android:text="@string/delete_show"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>